# bazel-cache-proxy

./: .release-please-config.json  Cargo.toml  cliff.toml
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
crates/bazel-cache-proxy/: Cargo.toml
crates/bazel-cache-proxy-core/: Cargo.toml  build.rs
crates/bazel-cache-proxy-core/proto/google/bytestream/: bytestream.proto
crates/bazel-cache-proxy-core/src/: backend.rs  digest.rs  entry_kind.rs  error.rs  hashing_writer.rs  layered.rs  lib.rs  noop.rs  testing.rs
crates/bazel-cache-proxy-core/src/grpc/: action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  mod.rs  resource_name.rs  server.rs
crates/bazel-cache-proxy-core/src/http/: extractors.rs  handlers.rs  health.rs  mod.rs  server.rs
crates/bazel-cache-proxy-core/src/proto/: mod.rs
crates/bazel-cache-proxy-disk/: Cargo.toml
crates/bazel-cache-proxy-disk/src/: disk_backend.rs  eviction.rs  lib.rs
crates/bazel-cache-proxy-gcs/: Cargo.toml
crates/bazel-cache-proxy-gcs/src/: gcs_backend.rs  lib.rs
crates/bazel-cache-proxy-gha/: Cargo.toml
crates/bazel-cache-proxy-gha/src/: client.rs  coherency.rs  gha_backend.rs  lib.rs  probe.rs  rate_limiter.rs  v1.rs  v2.rs
crates/bazel-cache-proxy-s3/: Cargo.toml
crates/bazel-cache-proxy-s3/src/: lib.rs  s3_backend.rs
crates/bazel-cache-proxy-sqlite/: Cargo.toml
crates/bazel-cache-proxy-sqlite/src/: lib.rs
crates/bazel-cache-proxy/examples/: disk.toml  gha-with-disk-l1.toml  s3.toml
crates/bazel-cache-proxy/src/: config.rs  factory.rs  main.rs
