[package]
name = "bazel-cache-proxy-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core trait, types, HTTP and gRPC servers for bazel-cache-proxy"
repository = "https://github.com/tstapler/bazel-cache-proxy"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
dashmap = { workspace = true }
pin-project-lite = { workspace = true }
async-compression = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[features]
testing = []
