[package]
name = "bazel-cache-proxy-disk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Filesystem backend for bazel-cache-proxy"
repository = "https://github.com/tstapler/bazel-cache-proxy"

[dependencies]
bazel-cache-proxy-core = { path = "../bazel-cache-proxy-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
